# cs-lite-snippets

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
algorithms/lru_cache/: lru_cache.py
algorithms/two_pointers/: pair_sum.py
docs/: BigO_cheatsheet.md  retro_week0.md
networking/: tls_handshake_seq.md
shell/: find_todo.sh
shell/git_hooks/: prepare-commit-msg
sql/benchmarks/: README.md
sql/explain/: README.md
sql/schemas/: README.md
tests/: test_lru_cache.py  test_pair_sum.py
